# hostspp

impl/: element.hpp  preservation.hpp  vector.hpp  vector_line.hpp
impl/definition/: element.hpp  vector.hpp  vector_line.hpp
include/elelel/hostspp/: vector
test/: CMakeLists.txt  hosts.cpp
